--- a/_posts/_posts/0000-01-02-ac7708.md
+++ b/_posts/_posts/0000-01-02-ac7708.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Dogs and Frogs bring out your dead
 Use the left arrow to go back!
