Make line 5 more awsome

--- a/_posts/0000-01-01-intro.md
+++ b/_posts/0000-01-01-intro.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our ac7708 slide!"
 ---
-This is dogs and frogs
+This is dogs and frogs :tada:
 Use the right arrow to begin!
